cluster-cd/apps/chongus/home/scrypted/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name scrypted
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 11080
      protocol: TCP
    - name: rebroadcast
      port: 34135
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
